[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://actors/level/Level.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/Title/title-background.png" type="Texture" id=3]
[ext_resource path="res://ui/Game/pause.png" type="Texture" id=4]
[ext_resource path="res://ui/Game/back-to-menu.png" type="Texture" id=5]
[ext_resource path="res://ui/Game/back-to-play.png" type="Texture" id=6]
[ext_resource path="res://sound/button-click.ogg" type="AudioStream" id=7]
[ext_resource path="res://sound/button-hover.ogg" type="AudioStream" id=8]

[node name="Game" type="Control"]
pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
level_scene = ExtResource( 2 )

[node name="PauseMenu" type="Popup" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true

[node name="Background" type="TextureRect" parent="PauseMenu"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0

[node name="pause" type="TextureRect" parent="PauseMenu"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 4

[node name="back-to-menu" type="TextureButton" parent="PauseMenu"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 360.0
margin_top = 340.0
margin_right = 432.0
margin_bottom = 412.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
stretch_mode = 4

[node name="back-to-play" type="TextureButton" parent="PauseMenu"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 580.0
margin_top = 340.0
margin_right = 652.0
margin_bottom = 412.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
stretch_mode = 4

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[connection signal="mouse_entered" from="PauseMenu/back-to-menu" to="." method="_on_button_entered"]
[connection signal="pressed" from="PauseMenu/back-to-menu" to="." method="_on_backtomenu_pressed"]
[connection signal="mouse_entered" from="PauseMenu/back-to-play" to="." method="_on_button_entered"]
[connection signal="pressed" from="PauseMenu/back-to-play" to="." method="_on_backtoplay_pressed"]
